Añadiendo drag and drop

--- a/AJAX/Examen19/css/style.css
+++ b/AJAX/Examen19/css/style.css
@@ -2,6 +2,13 @@ a, button {
     width:100px;
     margin:5px;
 }
+#check{
+    display:flexbox;
+}
+.contenedor{
+    width: 100px;
+    height: 200px;
+}
 select {
     -webkit-appearance: none;
 }
